Updating the active camera changes viewport local cameras #106794

Closed
opened 2023-04-11 11:55:22 +02:00 by Dong-Hyun Kim · 1 comment
Member

System Information
Operating system: Windows 11
Graphics card: NVIDIA GeForce RTX 2060

Blender Version
Broken: 3.5.0
Worked: Not sure

Short description of error
Updating the active camera changes viewport local cameras. Local cameras are intended to be bound to viewports, without being affected by the global scene camera change. This is obviously not an expected behavior.

Exact steps for others to reproduce the error
It's very simple to reproduce

  1. Make many cameras in the scene
  2. Make many 3D viewports by splitting areas.
  3. Give one of the viewports local camera
    image
  4. Change the active camera with Set active object as camera operator.
    image
  5. The viewport with local camera assigned now has a new local camera.
**System Information** Operating system: Windows 11 Graphics card: NVIDIA GeForce RTX 2060 **Blender Version** Broken: 3.5.0 Worked: Not sure **Short description of error** Updating the `active camera` changes viewport `local camera`s. Local cameras are intended to be bound to viewports, without being affected by the global scene camera change. This is obviously not an expected behavior. **Exact steps for others to reproduce the error** It's very simple to reproduce 1. Make many cameras in the scene 1. Make many 3D viewports by splitting areas. 1. Give one of the viewports `local camera` ![image](/attachments/caa4f3fe-6a45-439f-9dcb-48fabaabda61) 1. Change the active camera with `Set active object as camera` operator. ![image](/attachments/592ecaf0-6031-4f86-a877-8a0874c2dce1) 1. The viewport with `local camera` assigned now has a new `local camera`.
Dong-Hyun Kim added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-04-11 11:55:22 +02:00
Dong-Hyun Kim changed title from Updated the `active camera` changes viewport `local camera`s to Updating the `active camera` changes viewport `local camera`s 2023-04-11 11:55:52 +02:00
Member

Can confirm, will check.

Can confirm, will check.
Philipp Oeser self-assigned this 2023-04-11 12:41:20 +02:00
Philipp Oeser added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-11 12:41:44 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-12 10:10:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106794
No description provided.