Fix #106794: Changing active camera changes other viewport local cameras

f36543c5f552 took care of syncing multiple viewport`s cameras, but wasnt
fully meeting intentions [which was to only do this if both viewports
are locked to the scene camera].

Check was only done for the viewport this was executed in (if this was
locked to the scene camera, it would change all other viewports as
well), now also check if the target viewport prefers to use its own
local camera instead and skip it in that case.

Pull Request: https://projects.blender.org/blender/blender/pulls/106799

Pull Request: https://projects.blender.org/blender/blender/pulls/106858